--- a/apps/progression/src/app/app.component.html
+++ b/apps/progression/src/app/app.component.html
@@ -1,1 +1,10 @@
-<app-nx-welcome></app-nx-welcome> <router-outlet></router-outlet>
+<h1>{{ hello$ | async | json }}</h1>
+
+<div>
+  <h1>Salvar Nome</h1>
+  <input [(ngModel)]="message" placeholder="Digite seu nome" />
+  <button (click)="onSaveMessage()">Salvar</button>
+  <p *ngIf="savedMessage">Nome salvo: {{ savedMessage }}</p>
+</div>
+
+<router-outlet></router-outlet>
